added more tests for Game, Board